--- a/learn_generative_model.ipynb
+++ b/learn_generative_model.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "OpenMNTと必要なライブラリをインストールします．"
+        "OpenMNTと必要なライブラリをインストールします．(2020年6月7日修正済:Google ColabのPyTorchのバージョンが上がったため修正)"
       ]
     },
     {
@@ -42,8 +42,9 @@
         "colab": {}
       },
       "source": [
-        "!git clone https://github.com/OpenNMT/OpenNMT-py.git -b 0.9.2\n",
-        "!cd OpenNMT-py;pip install -r requirements.txt"
+        "!pip install torch==1.2.0+cu92 torchvision==0.4.0+cu92 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip install torchtext==0.5 configargparse\n",
+        "!git clone https://github.com/OpenNMT/OpenNMT-py.git -b 0.9.2\n"
       ],
       "execution_count": 0,
       "outputs": []
