--- a/bert_dbdc_finetuning.ipynb
+++ b/bert_dbdc_finetuning.ipynb
@@ -45,11 +45,13 @@
         "colab": {}
       },
       "source": [
+        "!pip install torch==1.2.0+cu92 torchvision==0.4.0+cu92 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip install torchtext==0.5 configargparse\n",
         "!pip install transformers==2.1.1\n",
         "!pip install tensorboardX==1.9\n",
         "!git clone https://github.com/huggingface/transformers.git -b v2.1.1"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +80,7 @@
         "from google.colab import drive\n",
         "drive.mount('./drive')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +106,7 @@
         "--model_type bert --model_name_or_path bert-base-multilingual-cased  --task_name STS-B --evaluate_during_training \\\n",
         "--output_dir /content/drive/My\\ Drive/dsbook/dbdc_bert/out/ --do_train --do_eval --per_gpu_train_batch_size 16"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
