--- a/bert_example_based_finetuning.ipynb
+++ b/bert_example_based_finetuning.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "BERT_dbdc_finetuning.ipynb",
+      "name": "BERT_example_based_finetuning.ipynb ",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": []
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[Open with Colab](https://colab.research.google.com/github/dsbook/dsbook/blob/master/bert_dbdc_finetuning.ipynb)"
+        "[Open with Colab](https://colab.research.google.com/github/dsbook/dsbook/blob/master/bert_example_based_finetuning.ipynb)"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "「Go to this URL in a browser: https:// ...」と表示されるのでURLをクリックし，使用するアカウントを選択します．\n",
         "\n",
         "次のページで「許可」ボタンをクリックするとコードが表示されますので，\n",
-        "そのコードを「Enter your authorization code:」の下の入力欄に入れ，エンターキーを押してください．"
+        "そのコードをコピーし，「Enter your authorization code:」の下の入力欄にペーストしてエンターキーを押してください．"
       ]
     },
     {
@@ -90,8 +90,7 @@
         "colab_type": "text"
       },
       "source": [
-        "対話破綻検出のためのBERTのファインチューニングを実行します．\n",
-        "\n"
+        "用例ベース応答のためのBERTのファインチューニングを実行します．"
       ]
     },
     {
@@ -102,9 +101,32 @@
         "colab": {}
       },
       "source": [
-        "!python transformers/examples/run_glue.py --data_dir /content/drive/My\\ Drive/dsbook/dbdc_bert/  --overwrite_output_dir \\\n",
-        "--model_type bert --model_name_or_path bert-base-multilingual-cased  --task_name STS-B --evaluate_during_training \\\n",
-        "--output_dir /content/drive/My\\ Drive/dsbook/dbdc_bert/out/ --do_train --do_eval --per_gpu_train_batch_size 16"
+        "!python transformers/examples/run_glue.py --data_dir /content/drive/My\\ Drive/dsbook/example_based_bert/  --overwrite_output_dir \\\n",
+        "--model_type bert --model_name_or_path bert-base-multilingual-cased --task_name WNLI --evaluate_during_training --save_steps 1000 --max_steps 1000 \\\n",
+        "--output_dir /content/drive/My\\ Drive/dsbook/example_based_bert/out/ --do_train --do_eval --per_gpu_train_batch_size 16"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xJFNTvzeMJTo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Google Drive上にキャッシュが残っているとファインチューニングがうまく動かない場合があるので，動かない場合は以下を実行．"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KjAIEndQMIHO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!rm /content/drive/My\\ Drive/dsbook/example_based_bert/cached_*"
       ],
       "execution_count": null,
       "outputs": []
