--- a/learn_generative_model.ipynb
+++ b/learn_generative_model.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "!pip install torch==1.2.0+cu92 torchvision==0.4.0+cu92 -f https://download.pytorch.org/whl/torch_stable.html\n",
         "!pip install torchtext==0.5 configargparse\n",
-        "!pip install OpenNMT-py==1.0.0rc1\n",
+        "!pip install OpenNMT-py==1.0.0\n",
         "!git clone https://github.com/OpenNMT/OpenNMT-py.git -b 0.9.2\n"
       ],
       "execution_count": 0,
