--- a/learn_generative_model.ipynb
+++ b/learn_generative_model.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "OpenMNTと必要なライブラリをインストールします．(2020年6月7日修正済:Google ColabのPyTorchのバージョンが上がったため修正)"
+        "OpenMNTと必要なライブラリをインストールします．書籍にかかれている内容とは異なっていますが， これはGoogle Colabのアップデートによる影響で， 新たに環境構築が必要になったためです．"
       ]
     },
     {
@@ -42,10 +42,10 @@
         "colab": {}
       },
       "source": [
-        "!pip install torch==1.2.0+cu92 torchvision==0.4.0+cu92 -f https://download.pytorch.org/whl/torch_stable.html\n",
-        "!pip install torchtext==0.5 configargparse\n",
+        "!pip install torch==1.4.0+cu92 torchvision==0.5.0+cu92 torchaudio==0.4.0 torchtext==0.5.0 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip install spacy==2.2.2 panel==0.6.4 fbprophet==0.5 holoviews==1.12.4 configargparse\n",
         "!pip install OpenNMT-py==1.0.0\n",
-        "!git clone https://github.com/OpenNMT/OpenNMT-py.git -b 0.9.2\n"
+        "!git clone https://github.com/OpenNMT/OpenNMT-py.git -b 1.0.0\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -59,11 +59,9 @@
       "source": [
         "データの読み込みと保存のためGoogle Driveに接続します．\n",
         "\n",
-        "「Go to this URL in a browser: https:// ...」と表示されるのでURLをクリックし，使用するアカウントを選択します．\n",
+        "「このノートブックに Google ドライブのファイルへのアクセスを許可しますか？」と表示されるので「Google Driveに接続」をクリックし，使用するアカウントを選択します．\n",
         "\n",
-        "次のページで「許可」ボタンをクリックするとコードが表示されますので，\n",
-        "そのコードを「Enter your authorization code:」の下の入力欄に入れ，エンターキーを押してください．\n",
-        "\n"
+        "次のページで「許可」ボタンをクリックしてください．\n"
       ]
     },
     {
