--- a/bert_dbdc_finetuning.ipynb
+++ b/bert_dbdc_finetuning.ipynb
@@ -45,10 +45,8 @@
         "colab": {}
       },
       "source": [
-        "!pip install torch==1.2.0+cu92 torchvision==0.4.0+cu92 -f https://download.pytorch.org/whl/torch_stable.html\n",
-        "!pip install torchtext==0.5 configargparse\n",
-        "!pip install transformers==2.1.1\n",
-        "!pip install tensorboardX==1.9\n",
+        "!pip install torch==1.4.0+cu92 torchvision==0.5.0+cu92 torchaudio==0.4.0 torchtext==0.5.0 folium==0.2.1 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip install configargparse transformers==2.1.1 tensorboardX==1.9\n",
         "!git clone https://github.com/huggingface/transformers.git -b v2.1.1"
       ],
       "execution_count": null,
@@ -63,10 +61,9 @@
       "source": [
         "データの読み込みと保存のためGoogle Driveに接続します．\n",
         "\n",
-        "「Go to this URL in a browser: https:// ...」と表示されるのでURLをクリックし，使用するアカウントを選択します．\n",
+        "「このノートブックに Google ドライブのファイルへのアクセスを許可しますか？」と表示されるので「Google Driveに接続」をクリックし，使用するアカウントを選択します．\n",
         "\n",
-        "次のページで「許可」ボタンをクリックするとコードが表示されますので，\n",
-        "そのコードを「Enter your authorization code:」の下の入力欄に入れ，エンターキーを押してください．"
+        "次のページで「許可」ボタンをクリックしてください．\n"
       ]
     },
     {
